<resources>
    <string name="app_name">githubproject3</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="location">Location</string>
    <string name="repo">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repodetail"> </string>
    <string name="followersdetail"> </string>
    <string name="followingdetail"> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_followers">halaman followers</string>
    <string name="content_tab_following">halaman following</string>
    <string name="text_ffollowers">Followers</string>
    <string name="text_ffollowing">Following</string>
    <string name="favorite">Favorite</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="Alarm">Alarm</string>
    <string name="toast_repeat_alarm">Repeating alarm set up</string>
    <string name="toast_repeat_alarm_cancel">Repeating alarm is canceled</string>
    <string name="type_set_repeating_alarm">Repeating Alarm</string>
    <string name="time_alarm">09:00</string>
    <string name="massage_alarm">Keep the spirit</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>